<resources>
    <plurals name="plural_issue_tag">
        <item quantity="zero">Issue</item>
        <item quantity="one"> Issue</item>
        <item quantity="other"> Issues</item>
    </plurals>
    <plurals name="plural_upvote_tag">
        <item quantity="zero">%1$d Upvote</item>
        <item quantity="one">%1$d Upvote</item>
        <item quantity="other">%1$d Upvotes</item>
    </plurals>
    <plurals name="plural_downvote_tag">
        <item quantity="zero">%1$d Downvote</item>
        <item quantity="one">%1$d Downvote</item>
        <item quantity="other">%1$d Downvotes</item>
    </plurals>
    <plurals name="plural_follower_tag">
        <item quantity="zero">Follower</item>
        <item quantity="one"> Follower</item>
        <item quantity="other"> Followers</item>
        
    </plurals>
    <plurals name="plural_issue_raise_tag">
        <item quantity="zero">Issue Raised</item>
        <item quantity="one"> Issue Raised</item>
        <item quantity="other"> Issues Raised</item>
        
    </plurals>
    <plurals name="plural_view_count">

        <item quantity="zero">%1$d </item>

        <item quantity="one">%1$d </item>

        <item quantity="other">%1$d </item>

    </plurals>
    <string name="key">AKIAIKEUC2YSVO54FTTQ</string>
    <string name="access">VCuSROBBfXOQJy6e0rUZX5scAPp4D4Yz3ce+szbG</string>
    <string name="app_matrica_key">27d73e2f-95d5-47da-ab15-ff865a82b73c</string>
    <string name="default_notification_channel_id">molit2016</string>
    <string name="about_us_url">https://m.molitics.in/political/news/app</string>
    <string name="facebook_app_id">315754702207952</string>
    <string name="app_name">Molitics</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Closed</string>
    <string name="loading">loading</string>
    <string name="contact_leader_header">Contact your Leader</string>
    <string name="know_more_header">Know more</string>
    <string name="notification_header">Notifications</string>
    <string name="Leaders_Followed">Leaders Followed</string>
    <string name="candidates_header">Candidates</string>
    <string name="bookmarked_header">Bookmarks</string>
    <string name="bookmark"> Bookmark </string>
    <string name="cartoon">Cartoon Corner</string>
    <string name="election_results_header">Election Results</string>
    <string name="survey_take">Take Survey</string>
    <string name="otp"> A One Time Password (OTP) will be sent via SMS to verify your number </string>
    <string name="district_display">District</string>
    <string name="resend_otp">If you don\'t receive verification code in\n </string>
    <string name="error_player">There was an error initializing the YouTubePlayer %1$s</string>
    <string name="survey">Survey</string>
    <string name="articles">Articles</string>
    <string name="notification_txt">Notification</string>
    <string name="media_of_politics">"Media of Politics \n"</string>
    <string name="no_internet">No Internet</string>
    <string name="network_error">No Network</string>
    <string name="participated_parties">Participated Parties</string>
    <string name="mla_constituency">MLA Constituency</string>
    <string name="mp_constituency">MP Constituency</string>
    <string name="const_banner">Electors as per previous Election</string>
    <string name="election_year">Election Year </string>
    <string name="political_party">Political Party</string>
    <string name="sure_exit">You can choose only one among District, MP Constituency &amp; MLA Constituency</string>
    <string name="exit">OK</string>
    <string name="cancel">Cancel</string>
    <string name="exit_dialog">Exit Dialog</string>
    <string name="otp_not_enter">Please enter OTP.</string>
    <string name="termNcond">By signing up I agree to Terms &amp; Conditions</string>
    <string name="verify_text">Please type the verification code sent to +91 </string>
    <string name="select_state_txt">Please select your State, So we can customise your News feed</string>
    <string name="like_dis_txt">Related Parties/Leaders</string>
    <string name="select_constituency">Select your MP Constituency \n to View Election Results</string>
    <string name="profile_save">Profile successfully saved</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="m_politicsl_leader">I am a Political Leader \n Register to Mplus \n</string>
    <string name="molitics_videos">Politics Live</string>
    <string name="follow">Follow %d</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="cant_follow_own_issue">You can\'t follow your own issue.</string>
    <string name="issues_following">Issues Following</string>
    <string name="issue_following"> Issue Following</string>
    <string name="type_issue">Describe your issue briefly or paste any link</string>
    <string name="trending">Trending</string>
    <string name="trendings">Trendings</string>
    <string name="user_suggestion">User Suggestion</string>
    <string name="no_issue_create">Currently, No issue created.</string>
    <string name="trending_leaders_txt">Trending Leaders</string>
    <string name="logout_confirm_txt">Are you sure you want to Logout. </string>
    <string name="lok_sabha_constituency">Lok Sabha Constituency : </string>
    <string name="delete_comment">Are you sure you want to delete it?</string>
    <string name="edit">Edit</string>
    <string name="hash_tag">#  %1$d</string>
    <string name="anonymous_tag">Anonymous</string>
    <string name="more_tag">More</string>
    <string name="less_tag">Less</string>
    <string name="issue_tag">Issue</string>
    <string name="follower_tag">Followers</string>
    <string name="issue_raised_tag">Issue Raised</string>
    <string name="follow_tag">Follow</string>
    <string name="following_tag">Following %d</string>
    <string name="process_text_action_name">Process Text</string>
    <string name="upvote_string_percent"> %1$d Upvote</string>
    <string name="downvote_string_percent"> %1$d Downvote</string>
    <string name="asset_statements" translatable="false">[{\n  \"relation\": [\"delegate_permission/common.handle_all_urls\"],\n  \"target\": {\n    \"namespace\": \"web\",\n    \"site\": \"https://molitics.in\",\n  }\n}]</string>
    <string name="retry_select_constituency">To know your local Leader click here.</string>
    <string name="update_app_title">Update Available</string>
    <string name="update_message_txt">You are using an older version of our app. Kindly Update your app for a better experience.</string>
    <string name="force_update">Please update your version of Application to continue using Molitics.</string>
    <string name="dob_string">DOB :  %s </string>
    <string name="state_string">State :  %s </string>
    <string name="mla_string">Mla Constituency :  %s </string>
    <string name="mp_string">MP Constituency :  %s </string>
    <string name="upvote_string">Upvote  %s </string>
    <string name="downvote_string">Downvote  %s </string>
    <string name="add_to_post_voice">Add To Your Post</string>
    <string name="add_image">Add Photo</string>
    <string name="add_video">Add Video</string>
    <string name="tag_leader">Tag Leader</string>
    <string name="like_txt">Like</string>
    <string name="comment_txt">Comment</string>
    <string name="share_txt">Share</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="submit_video">Submit Video</string>
    <string name="close_video">Close Video</string>
    <string name="permission_request">This sample needs permission for camera and audio recording.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="exo_controls_volume_up_description">Volume Up</string>
    <string name="exo_controls_volume_off_description">Volume Off</string>
    <string name="no_article_submitted">You haven\'t submitted any article yet.</string>
    <string name="video_uploading_failed">Video uploading failed!! try again</string>
    <string name="video_size">Video size must not be greater than 150 MB.</string>
    <string name="image_video_limit">You can upload maximum 5 images or videos.</string>
    <string name="term_condition_url">http://api.molitics.net/terms</string>
    <string name="share_to">Share to</string>
    <string name="log_out">Log Out</string>
    <string name="news_source">Source :  %s </string>
    <string name="video_downloaded">Video has been downloaded.</string>
    <string name="state_list_fetching">Fetching data</string>
    <string name="article_description_m">Please add Article Title Description</string>
    <string name="article_tilte_m">Please add Article Title</string>
    <string name="article_image_m">Please select Image</string>
    <string name="raise_issue_against_leader">Be the First one to Raise the issue against this Leader</string>
    <string name="seek_news_req_response">Your request to seek News for this Leader has been Submitted. Follow this Leader to be Notified.</string>
    <string name="select_state_first">Please select state first.</string>
    <string name="next_survey">Next Survey</string>
    <string name="take_survey">Take Survey</string>
    <string name="type_your_comment_here">Type your comment here…</string>
    <string name="read_more">...Read more</string>
    <string name="cannot_empty">This field cann\'t be empty</string>
    <string name="logout">Logout</string>
    <string name="invite_contact">Invite your friends</string>
    <string name="my_profile">My Profile</string>
    <string name="english">English</string>
    <string name="other">other</string>
    <string name="save">Save</string>
    <string name="news_bookmark">News Bookmark</string>
    <string name="invite_to_molitics">Invite to Molitics</string>
    <string name="hindi_hindi">हिंदी</string>
    <string name="news_channels">Media</string>
    <string name="see_all">See All</string>
    <string name="no_video_available">No video available</string>
    <string name="change_language">Change Language</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="select_profession">Select Profession</string>
    <string name="user_name">Name</string>
    <string name="email">Email</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="state_name">State Name</string>
    <string name="enter_your_state_name">Enter your State Name</string>
    <string name="district_name">District Name</string>
    <string name="enter_your_district_name">Enter your District Name</string>
    <string name="lok_sabha">Lok Sabha</string>
    <string name="enter_your_lok_sabha_constituency">Enter your Lok Sabha Constituency</string>
    <string name="assembly_constituency">Assembly Constituency</string>
    <string name="enter_your_assembly_constituency">Enter your Assembly Constituency</string>
    <string name="political_orientation">Political Orientation</string>
    <string name="enter_your_political_orientation">Enter your Political Orientation</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="about_us">About us</string>
    <string name="welcome_to_molitics">Welcome to Molitics</string>
    <string name="sign_in_using_password">Sign in using password</string>
    <string name="or">OR</string>
    <string name="dont_have_acc">Don\'t have an Account?</string>
    <string name="register_underline"><u>Register</u></string>
    <string name="sign_in_using_otp">Sign in using Otp</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="gender_asterisk">Gender*</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="name">Name</string>
    <string name="bio">Bio</string>
</resources>