<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingBottom="@dimen/dim_5dp"
    android:visibility="visible">

    <RelativeLayout
        android:id="@+id/video_header_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/dim_5dp"
        android:paddingRight="@dimen/dim_5dp">

        <TextView
            android:id="@+id/politics_live"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/dim_5dp"
            android:fontFamily="sans-serif-medium"
            android:padding="@dimen/dim_5dp"
            android:text="@string/molitics_videos"
            android:textColor="@color/about_pop_no"
            android:textSize="14sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/view_video_all_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:fontFamily="sans-serif"
            android:lineSpacingExtra="6sp"
            android:padding="@dimen/dim_5dp"
            android:text="@string/see_all"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="normal"
            android:visibility="gone" />

        <com.molitics.molitician.customView.LabeledSwitch
            android:id="@+id/switch_language"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dim_20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/dim_5dp"
            android:textSize="12sp"
            app:colorBorder="@color/red"
            app:colorOn="@color/red"
            app:on="true"
            app:textOff="@string/english"
            app:textOn="@string/hindi_hindi" />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/video_hor_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/video_header_view"
        android:scrollbars="none" />

    <TextView
        android:id="@+id/rl_no_data"
        android:layout_width="match_parent"
        android:layout_height="@dimen/live_video"
        android:layout_centerInParent="true"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/no_video_available"
        android:textColor="@color/white"
        android:textSize="@dimen/mid_text_16"
        android:textStyle="normal"
        android:visibility="gone" />
</RelativeLayout>